--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ $(function(){
 		<div class="visual_area">
             <div class="visual_txt">
                 <span>This is Website for SHS</span>            
-                <span class="sub_tit">He want to translate his job</span>
+                <span class="sub_tit">He want to translate his job1</span>
             </div>
             <a href="javascript:;" class="down_arrow"><img src="web/images/main/down_arrow.png" alt="" /></a>
         </div>	
