--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ $(function(){
 <div class="open"></div>
 	<header>
 		<h1><a href="index.php"><img src="web/images/common/s_logo.png" alt="Logo" /></a></h1>
-		<span class="css_bar"></span>
+		<a class="css_bar"></a>
 	</header>
 
 	<section>
@@ -52,7 +52,7 @@ $(function(){
                         <li class="s_thum">
                             <div class="s_thum_view">
                                 <div class="bg">
-                                    <a href="#">Simlider ver 1.4</a>
+                                    <a href="simlider.html">Simlider ver 1.4</a>
                                 </div>
                             </div>                            
                         </li>
