--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@ $(function(){
 </script>
 <div class="wrap">
 <div class="open"></div>
-	<header>
-		<h1><a href="index.php"><img src="web/images/common/s_logo.png" alt="Logo" /></a></h1>
-		<a class="css_bar"></a>
-	</header>
+	<div class="header">
+		<h1><a href="index.html"><img src="web/images/common/s_logo.png" alt="Logo" /></a></h1>
+		<a href="javascript:;" class="css_bar">
+            <span class="sp01"></span>
+            <span class="sp02"></span>
+            <span class="sp03"></span>
+        </a>
+	</div>
 
-	<section>
+	<div class="container">
 		<div class="visual_area">
             <div class="visual_txt">
                 <span>This is Website for SHS</span>            
@@ -108,9 +112,9 @@ $(function(){
                 </div>
             </div><!-- //portfolio -->            
 		</div><!-- //portfolio_wrap -->
-	</section>
+	</div><!-- //container -->
 	
-	<footer>
+	<div class="footer">
 		<div class="footer_area">
 			<div class="footer_title">
 				<img src="web/images/main/footer_title.png" alt="contact Info" />
@@ -121,7 +125,7 @@ $(function(){
 				<p><span>Tel : 010 8914 5082</span> <span>Mobile : 010 8914 5082</span></p>
 			</div>
 		</div>
-	</footer>
+	</div><!-- //container -->
 </div>
 
 
