--- a/index.html
+++ b/index.html
@@ -33,12 +33,22 @@ $(function(){
 <div class="open"></div>
 	<div class="header">
 		<h1><a href="index.html"><img src="web/images/common/s_logo.png" alt="Logo" /></a></h1>
-		<a href="javascript:;" class="css_bar">
+		<a href="javascript:;" class="open_menu_bar">
             <span class="sp01"></span>
             <span class="sp02"></span>
             <span class="sp03"></span>
         </a>
-	</div>
+	</div><!-- //header -->
+    
+    <div class="open_menu">
+        <a href="index.html" class="logo"><img src="web/images/common/s_logo.png" alt="Logo" />
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="simlider.html">Simlider</a></li>
+            <li><a href="#">Simpoilo</a></li>
+        </ul>
+        <a href="#" class="menu_close"></a>
+    </div><!-- //open_menu -->
 
 	<div class="container">
 		<div class="visual_area">
@@ -50,7 +60,7 @@ $(function(){
         </div>	
 		<div class="portfolio_wrap">
 			<div class="portfolio">
-				<h2><img src="web/images/main/portfolio_title.png" alt="portfolio" /></h2>
+				<h2>portfolio</h2>
 			    <div class="portfolio_view">
                     <ul id="simpolio" class="da-thumbs">
                         <li class="s_thum">
