--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ $(function(){
         </div>	
 		<div class="portfolio_wrap">
 			<div class="portfolio">
-				<h2>portfolio</h2>
+				<h2>
+                    <span>portfolio</span>
+                </h2>
 			    <div class="portfolio_view">
                     <ul id="simpolio" class="da-thumbs">
                         <li class="s_thum">
