--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
 <body>
 <form name="frm" id="frm" method="post" onsubmit="return false;"><script>
 $(function(){
-		
+    $('.view_loading').hide();
 	var simpolio = new SimPolio('#simpolio');
     
     $(' .da-thumbs > li ').hoverdir({
         hoverElem : '.bg',
         hoverDelay : 100
     });
-
 });
 </script>
+<div class="view_loading">
+    <img src="web/images/common/view_loading.gif" alt="페이지 로딩" />
+</div>
 <div class="wrap">
 <div class="open"></div>
 	<div class="header">
@@ -66,59 +68,95 @@ $(function(){
 			    <div class="portfolio_view">
                     <ul id="simpolio" class="da-thumbs">
                         <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
+                                <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="simlider.html">Simlider ver 1.4</a>
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
+                                        <p>KOLON<br>PHARMA</p>
+                                    </a>
                                 </div>
                             </div>                            
                         </li>
                         <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <a href="javascript:;"></a>
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
+                                <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="#"></a>
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
+                                        <p>KOLON<br>PHARMA</p>
+                                    </a>
                                 </div>
-                            </div>
+                            </div>                            
                         </li>
                         <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <a href="javascript:;"></a>
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
+                                <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="#"></a>
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
+                                        <p>KOLON<br>PHARMA</p>
+                                    </a>
                                 </div>
-                            </div>
+                            </div>                            
                         </li>
                         <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <a href="javascript:;"></a>
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
+                                <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="#"></a>
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
+                                        <p>KOLON<br>PHARMA</p>
+                                    </a>
                                 </div>
-                            </div>
+                            </div>                            
                         </li>
                         <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <a href="javascript:;"></a>
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
+                                <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="#"></a>
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
+                                        <p>KOLON<br>PHARMA</p>
+                                    </a>
                                 </div>
-                            </div>
+                            </div>                            
                         </li>
                         <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <a href="javascript:;"></a>
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
+                                <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="#"></a>
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
+                                        <p>KOLON<br>PHARMA</p>
+                                    </a>
                                 </div>
-                            </div>
+                            </div>                            
                         </li>
                         <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <a href="javascript:;"></a>
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
+                                <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="#"></a>
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
+                                        <p>KOLON<br>PHARMA</p>
+                                    </a>
                                 </div>
-                            </div>
+                            </div>                            
                         </li>
                     </ul>
                 </div>
