--- a/index.html
+++ b/index.html
@@ -70,12 +70,25 @@ $(function(){
                         <li class="s_thum">
                             <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
-                                <p>KOLON<br>PHARMA</p>                                
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="Simlider" /></h3>
+                                <p>Simlider</p>                                
                                 <div class="bg">
                                     <a href="simlider.html">
-                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
-                                        <p>KOLON<br>PHARMA</p>
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="Simlider" /></h3>
+                                        <p>Simlider</p>
+                                    </a>
+                                </div>
+                            </div>                            
+                        </li>
+                        <li class="s_thum">
+                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
+                            <div class="s_thum_view">
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="Simpolio" /></h3>
+                                <p>Simpolio</p>                                
+                                <div class="bg">
+                                    <a href="simlider.html">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="Simpolio" /></h3>
+                                        <p>Simpolio</p>
                                     </a>
                                 </div>
                             </div>                            
@@ -86,7 +99,7 @@ $(function(){
                                 <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
                                 <p>KOLON<br>PHARMA</p>                                
                                 <div class="bg">
-                                    <a href="simlider.html">
+                                    <a href="http://www.kolonpharm.co.kr/">
                                         <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
                                         <p>KOLON<br>PHARMA</p>
                                     </a>
@@ -96,12 +109,12 @@ $(function(){
                         <li class="s_thum">
                             <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
-                                <p>KOLON<br>PHARMA</p>                                
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="Halla" /></h3>
+                                <p>Halla</p>                                
                                 <div class="bg">
-                                    <a href="simlider.html">
-                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
-                                        <p>KOLON<br>PHARMA</p>
+                                    <a href="http://www.halla.com/">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="Halla" /></h3>
+                                        <p>Halla</p>
                                     </a>
                                 </div>
                             </div>                            
@@ -109,12 +122,12 @@ $(function(){
                         <li class="s_thum">
                             <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
-                                <p>KOLON<br>PHARMA</p>                                
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="NAFF" /></h3>
+                                <p>NAFF</p>                                
                                 <div class="bg">
-                                    <a href="simlider.html">
-                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
-                                        <p>KOLON<br>PHARMA</p>
+                                    <a href="http://naff.bifan.kr/">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="NAFF" /></h3>
+                                        <p>NAFF</p>
                                     </a>
                                 </div>
                             </div>                            
@@ -122,12 +135,12 @@ $(function(){
                         <li class="s_thum">
                             <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
-                                <p>KOLON<br>PHARMA</p>                                
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="Mando Footloose" /></h3>
+                                <p>MANDO<br>FOOTLOOSE</p>                                
                                 <div class="bg">
-                                    <a href="simlider.html">
-                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
-                                        <p>KOLON<br>PHARMA</p>
+                                    <a href="https://www.mandofootloose.com/">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="Mando Footloose" /></h3>
+                                        <p>MANDO<br>FOOTLOOSE</p>
                                     </a>
                                 </div>
                             </div>                            
@@ -135,25 +148,12 @@ $(function(){
                         <li class="s_thum">
                             <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
                             <div class="s_thum_view">
-                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
-                                <p>KOLON<br>PHARMA</p>                                
+                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="LAB-MONSTER" /></h3>
+                                <p>LAB-MONSTER</p>                                
                                 <div class="bg">
-                                    <a href="simlider.html">
-                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
-                                        <p>KOLON<br>PHARMA</p>
-                                    </a>
-                                </div>
-                            </div>                            
-                        </li>
-                        <li class="s_thum">
-                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
-                            <div class="s_thum_view">
-                                <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="코오롱 제약" /></h3>
-                                <p>KOLON<br>PHARMA</p>                                
-                                <div class="bg">
-                                    <a href="simlider.html">
-                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="코오롱 제약" /></h3>
-                                        <p>KOLON<br>PHARMA</p>
+                                    <a href="http://www.lab-monster.com/">
+                                        <h3><img src="web/images/portfolio/portfolio_01_on.jpg" alt="LAB-MONSTER" /></h3>
+                                        <p>LAB-MONSTER</p>
                                     </a>
                                 </div>
                             </div>                            
@@ -167,15 +167,16 @@ $(function(){
 	<div class="footer">
 		<div class="footer_area">
 			<div class="footer_title">
-				<img src="web/images/main/footer_title.png" alt="contact Info" />
+				<p>Contact Info</p>
 			</div>
 			<div class="footer_address">
-				<p>Address: 392-72, Hwagok-dong, Gangseo-gu, Seoul, Korea.</p>
-				<p>Email : tlagustn88@naver.com</p>
-				<p><span>Tel : 010 8914 5082</span> <span>Mobile : 010 8914 5082</span></p>
+				<p>Email : <a href="mailto:tlagustn88@naver.com" target="_self">tlagustn88@naver.com</a></p>
+				<p>Tel : <a href="tel:01089145082">010 8914 5082</a></p>
+                <p>Mobile : <a href="tel:01089145082">010 8914 5082</a></span></p>
 			</div>
 		</div>
 	</div><!-- //container -->
+    <a href="javascript:;" class="top_btn"><img src="web/images/common/top_btn.jpg" alt="TOP" /></a>
 </div>
 
 
