--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <link href="web/css/layout.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/main.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/media.css?ver=1.0" rel="stylesheet" type="text/css" />
+</head>
 <body>
-<form name="frm" id="frm" method="post" onsubmit="return false;"><script>
+<form name="frm" id="frm" method="post" onsubmit="return false;">
+<script>
 $(function(){
     $('.view_loading').hide();
 	var simpolio = new SimPolio('#simpolio');
@@ -43,13 +45,13 @@ $(function(){
 	</div><!-- //header -->
     
     <div class="open_menu">
-        <a href="index.html" class="logo"><img src="web/images/common/s_logo.png" alt="Logo" />
+        <a href="index.html" class="logo"><img src="web/images/common/s_logo.png" alt="Logo" /></a>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="simlider.html">Simlider</a></li>
             <li><a href="#">Simpoilo</a></li>
         </ul>
-        <a href="#" class="menu_close"></a>
+        <a href="javasciptt" class="menu_close">닫기</a>
     </div><!-- //open_menu -->
 
 	<div class="container">
