--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ $(function(){
 			<div class="footer_address">
 				<p>Email : <a href="mailto:tlagustn88@naver.com" target="_self">tlagustn88@naver.com</a></p>
 				<p>Tel : <a href="tel:01089145082">010 8914 5082</a></p>
-                <p>Mobile : <a href="tel:01089145082">010 8914 5082</a></span></p>
+                <p>Mobile : <a href="tel:01089145082">010 8914 5082</a></p>
 			</div>
 		</div>
 	</div><!-- //container -->
