--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ $(function(){
                             </div>                            
                         </li>
                         <li class="s_thum">
-                            <img src="web/images/portfolio/web_ribbon.png" alt="web" class="ribbon" />
+                            <img src="web/images/portfolio/mobile_ribbon.png" alt="mobile" class="ribbon" />
                             <div class="s_thum_view">
                                 <h3><img src="web/images/portfolio/portfolio_01_off.jpg" alt="HALLA MOBILE" /></h3>
                                 <p>HALLA MOBILE</p>                                
