--- a/simpolio.html
+++ b/simpolio.html
@@ -25,7 +25,35 @@ $(function(){
                 <span>portfolio</span>
             </h2>
             <div class="portfolio_view">
-                <ul id="simpolio" class="da-thumbs">
+                <ul id="simpolio">
+                    <li class="s_thum">
+                        <div class="s_thum_view">
+                        </div>                            
+                    </li>
+                    <li class="s_thum">
+                        <div class="s_thum_view">
+                        </div>                            
+                    </li>
+                    <li class="s_thum">
+                        <div class="s_thum_view">
+                        </div>                            
+                    </li>
+                    <li class="s_thum">
+                        <div class="s_thum_view">
+                        </div>                            
+                    </li>
+                    <li class="s_thum">
+                        <div class="s_thum_view">
+                        </div>                            
+                    </li>
+                    <li class="s_thum">
+                        <div class="s_thum_view">
+                        </div>                            
+                    </li>
+                    <li class="s_thum">
+                        <div class="s_thum_view">
+                        </div>                            
+                    </li>
                     <li class="s_thum">
                         <div class="s_thum_view">
                         </div>                            
