--- a/simpolio.html
+++ b/simpolio.html
@@ -22,7 +22,7 @@ $(function(){
     <div class="portfolio_wrap">
         <div class="portfolio">
             <h2>
-                <span>portfolio</span>
+                <span>SimPolio ver.1.3</span>
             </h2>
             <div class="portfolio_view">
                 <ul id="simpolio">
