--- a/simpolio.html
+++ b/simpolio.html
@@ -11,6 +11,7 @@
 <link href="web/css/simpolio.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/layout.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/main.css?ver=1.0" rel="stylesheet" type="text/css" />
+<link href="web/css/midea.css?ver=1.0" rel="stylesheet" type="text/css" />
 <body>
 <form name="frm" id="frm" method="post" onsubmit="return false;">
 <script>
