--- a/simpolio.html
+++ b/simpolio.html
@@ -22,9 +22,7 @@ $(function(){
 <div class="wrap">
     <div class="portfolio_wrap">
         <div class="portfolio">
-            <h2>
-                <span>SimPolio ver.1.3</span>
-            </h2>
+            <h1>SimPolio ver.1.3</h1>
             <div class="portfolio_view">
                 <ul id="simpolio">
                     <li class="s_thum">
