--- a/simpolio.html
+++ b/simpolio.html
@@ -13,6 +13,9 @@
 <link href="web/css/main.css?ver=1.0" rel="stylesheet" type="text/css" />
 <body>
 <form name="frm" id="frm" method="post" onsubmit="return false;">
+<style>
+h1 { text-align:center; }
+</style>
 <script>
 $(function(){
 	var simpolio = new SimPolio('#simpolio');
