--- a/simpolio.html
+++ b/simpolio.html
@@ -14,7 +14,7 @@
 <body>
 <form name="frm" id="frm" method="post" onsubmit="return false;">
 <style>
-h1 { text-align:center; }
+h1 { display:block; font-size:40px; text-align:center; }
 </style>
 <script>
 $(function(){
