--- a/simpolio.html
+++ b/simpolio.html
@@ -11,16 +11,17 @@
 <link href="web/css/simpolio.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/layout.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/main.css?ver=1.0" rel="stylesheet" type="text/css" />
-<body>
-<form name="frm" id="frm" method="post" onsubmit="return false;">
 <style>
-h1 { display:block; font-size:40px; text-align:center; }
+h1 { display:block; font-size:40px; text-align:center; margin-bottom:30px; }
 </style>
 <script>
 $(function(){
 	var simpolio = new SimPolio('#simpolio');
 });
 </script>
+</head>
+<body>
+<form name="frm" id="frm" method="post" onsubmit="return false;">
 <div class="wrap">
     <div class="portfolio_wrap">
         <div class="portfolio">
