--- a/simlider.html
+++ b/simlider.html
@@ -11,27 +11,30 @@
 <link href="web/css/simlider.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/layout.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/main.css?ver=1.0" rel="stylesheet" type="text/css" />
-<body>
-<form name="frm" id="frm" method="post" onsubmit="return false;"><script>
+<style>
+h1 { display:block; font-size:40px; text-align:center; margin-bottom:30px; }
+</style>
+<script>
 $(function(){
-
-
 	var slider01 = new Simlider("#Simlider",{	  
 		infiniteLoop : 'on',
 		pageShow : "on",
-		PageBtnPos : "center",
+		PageBtnPos : "center", 
 		playSpeed : 2000,
 		rollingSpeed : 1000
 	});
-
 });
 </script>
+</head>
+<body>
+<form name="frm" id="frm" method="post" onsubmit="return false;">
 <div class="wrap">
+    <h1>Simlider ver.1.4</h1>
     <div class="rolling_area">
         <ul id="Simlider">
-            <li><img src="web/images/main/main_img01.jpg" alt="" /><span>This is Website for SHS</span></li>
-            <li><img src="web/images/main/main_img02.jpg" alt="" /><span>Simlider ver 1.3</span></li>
-            <li><img src="web/images/main/main_img03.jpg" alt="" /><span>Simpolio ver 1.1</span></li>
+            <li><img src="web/images/main/main_img01.jpg" alt="" /></li>
+            <li><img src="web/images/main/main_img02.jpg" alt="" /></li>
+            <li><img src="web/images/main/main_img03.jpg" alt="" /></li>
         </ul>
     </div><!-- //rolling_area -->
 </div>
