--- a/simlider.html
+++ b/simlider.html
@@ -12,7 +12,7 @@
 <link href="web/css/layout.css?ver=1.0" rel="stylesheet" type="text/css" />
 <link href="web/css/main.css?ver=1.0" rel="stylesheet" type="text/css" />
 <style>
-h1 { display:block; font-size:40px; text-align:center; margin-bottom:30px; }
+h1 { display:block; font-size:40px; text-align:center; margin:30px 0; }
 </style>
 <script>
 $(function(){
