--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ $(function(){
         <a href="index.html" class="logo"><img src="web/images/common/s_logo.png" alt="Logo" /></a>
         <ul>
             <li><a href="index.html">HOME</a></li>
-            <li><a href="simlider.html">Simlider</a></li>
-            <li><a href="#">Simpoilo</a></li>
+            <li><a href="simlider.html">Simlider View</a></li>
+            <li><a href="simpolio.html">Simpoilo View</a></li>
         </ul>
         <a href="javasciptt" class="menu_close">닫기</a>
     </div><!-- //open_menu -->
