--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(function(){
             <li><a href="simlider.html">Simlider View</a></li>
             <li><a href="simpolio.html">Simpoilo View</a></li>
         </ul>
-        <a href="javasciptt" class="menu_close">닫기</a>
+        <a href="javascript:;" class="menu_close">닫기</a>
     </div><!-- //open_menu -->
 
 	<div class="container">
