--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ $(function(){
 });
 </script>
 <div class="wrap">
+<div id="skipNavi"> <a href="#cont">본문 바로가기</a></div>
 <div class="open"></div>
 	<div class="header">
 		<h1><a href="index.html"><img src="web/images/common/s_logo.png" alt="Logo" /></a></h1>
@@ -57,7 +58,7 @@ $(function(){
             </div>
             <a href="javascript:;" class="down_arrow"><img src="web/images/main/down_arrow.png" alt="" /></a>
         </div>	
-		<div class="portfolio_wrap">
+		<div class="portfolio_wrap" id="cont">
 			<div class="portfolio">
 				<h2>
                     <span>portfolio</span>
